# ChangeLog for app-misc/ca-certificates
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/ca-certificates/ChangeLog,v 1.106 2015/03/22 00:07:09 vapier Exp $

*ca-certificates-20141019.3.17.4 (22 Mar 2015)

  22 Mar 2015; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20141019.3.17.4.ebuild,
  +files/ca-certificates-20141019-root.patch:
  Version bump.

*ca-certificates-20140927.3.17.2 (16 Oct 2014)

  16 Oct 2014; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20140927.3.17.2.ebuild:
  Version bump.

*ca-certificates-20140325.3.16.3 (12 Aug 2014)

  12 Aug 2014; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20140325.3.16.3.ebuild:
  Version bump.

*ca-certificates-20130906-r1 (27 Mar 2014)
*ca-certificates-20140223.3.16-r1 (27 Mar 2014)
*ca-certificates-20140223.3.15.5-r1 (27 Mar 2014)
*ca-certificates-20140223-r1 (27 Mar 2014)

  27 Mar 2014; Rick Farina <zerochaos@gentoo.org>
  +ca-certificates-20130906-r1.ebuild, +ca-certificates-20140223-r1.ebuild,
  +ca-certificates-20140223.3.15.5-r1.ebuild,
  +ca-certificates-20140223.3.16-r1.ebuild, -ca-certificates-20130906.ebuild,
  -ca-certificates-20140223.3.15.5.ebuild,
  -ca-certificates-20140223.3.16.ebuild, -ca-certificates-20140223.ebuild:
  fix for bug #475352, remove broken symlinks

*ca-certificates-20140223.3.16 (22 Mar 2014)

  22 Mar 2014; Mike Frysinger <vapier@gentoo.org>
  +ca-certificates-20140223.3.16.ebuild:
  Version bump.

  21 Mar 2014; Christoph Junghans <ottxor@gentoo.org>
  ca-certificates-20140223.3.15.5.ebuild, ca-certificates-20140223.ebuild:
  fix prefix build

  20 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  ca-certificates-20140223.3.15.5.ebuild:
  We only need python if we are not using the precompiled certs.

  20 Mar 2014; Mike Gilbert <floppym@gentoo.org>
  ca-certificates-20140223.3.15.5.ebuild:
  Force usage of python 2.x during build.

*ca-certificates-20140223.3.15.5 (19 Mar 2014)
