@@ -44,24 +44,16 @@ EBUILD ca-certificates-20140223-r1.ebuild 6173 SHA256 16c147b61edca6daff8dce71ca
 EBUILD ca-certificates-20140223.3.15.5-r1.ebuild 6300 SHA256 a27cf48ebf50dd47571613da3d322f7a421154385e2345a568917fcd6f46cf2e SHA512 7511f43228addda16b4b53dcf9bfd4a9762c63520c8a90e6717707c87e8020a3b4a267d6d7343bed4f497aa97fc59615054e8ef8cea98c05d87523c45a2a5c33 WHIRLPOOL fe70d60cbbe289f5c0d55f84ab7ea5ab640a0165a8112707120ea13d29c03c69f5458fa3974d9fd74123016a873111700fca53d6a4edd1dee51e83489db4bd97
 EBUILD ca-certificates-20140223.3.16-r1.ebuild 6298 SHA256 bf12b98d046654227427e091d3af56abcd358a17713e5004e51a56ab11da392e SHA512 180f46e3cb916a625da0cab7808c674c4dcc8ec3a0244d7ff2586604a384355d9e9e7aa6e2422e4632e0fab8af2e3788ad3c4f249e63a4175c2a2996cb044475 WHIRLPOOL 872584b604b8deb5f77cc36b85dc209196f1fefb8e9097e03c51a3c6bc6ca883c8a62dc4186c655f5c55475e8c19bc7d1060b1831f9864eaf6a00cb67de31998
 EBUILD ca-certificates-20140325.3.16.3.ebuild 6291 SHA256 f35a9a2d1dbf40a6fc9da488d566bea236d86d84167dbb0a197874060d2acfd5 SHA512 51234db2b011b857e46d71be9b2befd27a9fa27336e580f12bfdd8eeb957dcb7134596e6e47787e90df829f84322b9ba0b264ed917c25bbf5945c9a8c4e2bb91 WHIRLPOOL 1d5ca40fc11b001884e4ec68a333007cea7ceecdd4c70d8562c08a25fd2079d1353dad2fd8f85a8e50921ce74d6efc49da86863a7361191eff7695aa6f190885
-EBUILD ca-certificates-20140927.3.17.2.ebuild 6318 SHA256 742d940aab7a79b2deb3b9d67659cf7ac6fe88552c1e83a3ebf92b3c8f2a28fa SHA512 7148a6ce42a074851082bff11db5736edaf7a4611ee0a5156fc50be8d946460dd993473a5e951c9a058c47dfd8c9b8918437b312e19a3bb6c142e40f325ad78c WHIRLPOOL d7a62d831f60de9fbe1f67d05cb237cc9d01f37ba995e6ccbc4778c7c109498cc7b14f20e76e57e1eba60de33f8b0fdfc0ff04ea1f550138d2b326c82b2f8e5e
+EBUILD ca-certificates-20140927.3.17.2.ebuild 6318 SHA256 ea83657eb4b5928685240d0eb65629cf0ef6e2cce06cea18c114c569b169df8c SHA512 58802d78814ab147ab049129e4ba1cf5c9db2a98ade4d1e89c0a768c525b3fd352bb7fe3a7d65a68d31ffec3683e34e8edaf7816f1b9d8a9bdeb27286bf03685 WHIRLPOOL 67dd83a5fc871b295b4f284931636acb46dc2ee75637496f2c02c6cbd70edc3ad59208a7d1dfe7ef806be695dac0354c7580596f6d087e95a9e78952830ff276
 EBUILD ca-certificates-20141019.3.17.4.ebuild 6312 SHA256 a31adaabcb4e9206b959fd642cfcf7b1510c6c061b33f75fd06ab5ebfa9391d0 SHA512 0b61196f6165f74e62161dcbd93b05ee8c20be197b396f78cc7e08ea619a73a62e89713db51f44f88edf52909505bd2944326d9f2f5123a514b46ceb625ec273 WHIRLPOOL 92112115f527ed2494e0d546240f72ed19ecacfdc688da9c65893e8467bc5e0703b1879d56152ca73be495f7fb05aea672da0e11db84ec734745271b57550ec7
-MISC ChangeLog 16716 SHA256 a269bf06a88cf009f01e41f468ebc9ea771b46307b095e1e8fa89d32cbbe8e91 SHA512 3b36627f2c3ec91fe61b0520f00411ae1ad34828862e6f57a8124f104db3af0cc38204f6a1e686ba229fe319f741150f2c5b92ebdcd2ebf567e847d1377b07dd WHIRLPOOL 54f1e2ab6079f82f6297389c8cdf8fd592455788698646b004f80fc2460c0789593f2933c512c7e78dfb115ec15eb947fe8285e48554dcbb58b07b74d2e54277
+MISC ChangeLog 16841 SHA256 c254b40d04929b8e7f85f704751ff8d8af16f3004fa5b1ddf47d847a4a4693cd SHA512 4ed8094333f98b70abb68596cd6cb14fcb4f2efffb72e2d1090033330e5b273a6e5adf84471a402edd231fa311c3c118e2007e3f8c7b47a4f38a9b40b49c8666 WHIRLPOOL 534c8ad671378d4d57cfe4e9bacf390e15a8f6bfcb9986814678c9f3699024904eec85ba3a5c337e1ef48ce02a57efbe6ae029664ec38e4621bdfe4867373a65
 MISC metadata.xml 343 SHA256 770e903b1433ea49a4d4e8fc47084cfa0412e76d2ab59f973d80d2e3db2eaae9 SHA512 3d72166eaf516edbd6d68652f9debbc864046ab548f6e7c171c2790add07f436fb426781f5ef98bfc4b9c3f36e3b616c8b8973e5c601b13f2fa4bdf2bba3f89d WHIRLPOOL bbffa556e696d62479bcdd2d67b03368f412859a1eb9d47ae93f4b364d6e44aca229b20649f97b3a3fc0ad51e2b831b2e1cdd1da84b3abf8ffa17c5e75305088
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVDgevAAoJEPGu1DbS6WIA3hoP/Aq1ITRO7AkMMrQuH3TxPAhV
-bsptGY/PoF6WVsLZ0QSWLpZEXOdvcGl9MKYW6kH3+/vDvn/WBRpBIaYtfc2qiWYa
-Y0ynlEDRCWRu1iAl2YVxxZdBDH4FXmqOzAPGTZOpBgEJJWwycCRc4AolSO0z1x4y
-hy7JOQvKhk01102Piyf2PFgxKiJw4p/1lICVeNubxC0axfizLE22WcMZg/QJwcxe
-2ORX/YcPeyoxcoCU1gk+N2kX6su7F8lwGD467wF9+3voNGCDE4FrhCFMw86l58EK
-4+klIjVNOjQzTog9o2u25cagKGTqsVtaoBqiRcTqa4i5fUW+LbW0OLsGhSjyKgTL
-1ALHaP8/tTcCR+h7r5JhEX4nQH+ZHvtWCIIl6QUQWVN2PUfnUfbzcD0jEIZefs55
-IUTL8QXjUZo8gH82aODTJJ74w6lXKbBFp7rJz6ZyMlw6o04erc6fhkZWXHlkaU6U
-bQX9X3oxhTBA2luLLCseSt1Qe2wkqhfU1HNm3o51fI7Q9Ijln+enEcKSfJ73VaiL
-QU2yarwseFveRGlQvZLcQ03gafuLwj8Is1F6m8lQ6DLOmuUJJ+3mS4rECfycJXmD
-sniaqp7X49lKgzoapagg/x7GsWJh+vjuRKEOZdhu5t+UNkXSsfoHXtjGNcX1wnVF
-Vnfa4QFfX/jPsdxruabk
-=1rl8
+iJwEAQEIAAYFAlUO1tkACgkQG9wOWsQutdYBjQP+MH/aNlxmQv8fMmztZSIOzlix
+pZDxSsbwNeyqGIzwLiNoHeSsxHctiAJl/lThrnJakGxi77Ko4t9/jB/wBvdR/Ydf
+2Pgq+NrOt4e54MZfVzFw6qSlsnzjXCC/cw4/aU6+zU5mjZTD1xDQlsbejjO5wgsC
+aBC8acm06yTsrc48ocA=
+=8xTy
 -----END PGP SIGNATURE-----
