@@ -1,0 +1,13 @@
+DEFINED_PHASES=configure install postinst postrm preinst prepare setup
+DEPEND=>=dev-libs/dbus-glib-0.100.2:= >=dev-libs/glib-2.30:= >=sys-apps/dbus-1.6.18:= || ( >=sys-power/upower-0.9.23 >=sys-power/upower-pm-utils-0.9.23-r2 ) >=x11-libs/gtk+-2.24:2= >=x11-libs/libnotify-0.7 x11-libs/libX11:= >=x11-libs/libXrandr-1.2:= x11-libs/libXext:= >=xfce-base/xfconf-4.10:= >=xfce-base/libxfce4ui-4.10:= >=xfce-base/libxfce4util-4.10:= lxpanel? ( lxde-base/lxpanel:= ) policykit? ( >=sys-auth/polkit-0.112 ) xfce_plugins_power? ( >=xfce-base/xfce4-panel-4.10:= ) dev-util/intltool sys-devel/gettext virtual/pkgconfig x11-proto/xproto >=sys-apps/sed-4
+DESCRIPTION=Power manager for the Xfce desktop environment
+EAPI=5
+HOMEPAGE=http://goodies.xfce.org/projects/applications/xfce4-power-manager
+IUSE=debug kernel_linux lxpanel networkmanager policykit systemd +xfce_plugins_power
+KEYWORDS=~amd64 ~arm ~ppc ~x86
+LICENSE=GPL-2
+RDEPEND=>=dev-libs/dbus-glib-0.100.2:= >=dev-libs/glib-2.30:= >=sys-apps/dbus-1.6.18:= || ( >=sys-power/upower-0.9.23 >=sys-power/upower-pm-utils-0.9.23-r2 ) >=x11-libs/gtk+-2.24:2= >=x11-libs/libnotify-0.7 x11-libs/libX11:= >=x11-libs/libXrandr-1.2:= x11-libs/libXext:= >=xfce-base/xfconf-4.10:= >=xfce-base/libxfce4ui-4.10:= >=xfce-base/libxfce4util-4.10:= lxpanel? ( lxde-base/lxpanel:= ) policykit? ( >=sys-auth/polkit-0.112 ) xfce_plugins_power? ( >=xfce-base/xfce4-panel-4.10:= ) networkmanager? ( net-misc/networkmanager ) !systemd? ( || ( sys-power/pm-utils sys-power/upower-pm-utils ) )
+SLOT=0
+SRC_URI=mirror://xfce/src/apps/xfce4-power-manager/1.4/xfce4-power-manager-1.4.4.tar.bz2
+_eclasses_=autotools	999c8f6cf5d91495cb0779588f20716c	eutils	9fb270e417e0e83d64ca52586c4a79de	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	libtool	52d0e17251d04645ffaa61bfdd858944	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	b99aa37f734b5d426efd83b2f271cece	versionator	cd0bcdb170807e4a1984115e9d53a26f	xfconf	eee85b2bc9e9826f5a9c1349a75a69fe
+_md5_=e2c526a5ee89c265bd8846ccb8176b8c
