@@ -8,29 +8,31 @@ DIST xfce4-power-manager-1.4.0.tar.bz2 1108569 SHA256 3fba9d1bdb2f535e5a5c2a8325
 DIST xfce4-power-manager-1.4.1.tar.bz2 1112797 SHA256 16a9e9bf3e0f8480d05b248817fbdc59e701e9161d3d0c7e53f3de28ed491f58 SHA512 ba6cc1b8304fd5d563da409c22e4ffc92ceed5e990bfa67cd13f430aba7795e8097845e38050cb8cf0a23e2a9f6b4bdb0747d6c413e76bd39be5bb5932613d34 WHIRLPOOL 07a6415d41a95057dde941e61b495ad9f1c30995f331f0aea1fc83f2507aee70ea98d01e0cf1ff9e43e3ab4a281305b32833c6dc3d4aaa1076daf8bb5f41660a
 DIST xfce4-power-manager-1.4.2.tar.bz2 1124605 SHA256 f28bad9270a155566e5ccf03de91c9cce7516e28192f3c0259a620bbce9d6b97 SHA512 9a349167a0f4eb8701459f8170a79aba94b41b82fb183f7b1e2859449b5e0122d71fafec3f02817ecd399458c7cb0416fe26384b7cf494a9ba90dd6936562ac1 WHIRLPOOL 90f00ee33787928dd4621cb5ae49ba0b5d840153e290d301b263097a764fd6f824a4fb4ffc90768b0e4beb16c71c378718e834df0986b5174236df99e4fffc98
 DIST xfce4-power-manager-1.4.3.tar.bz2 1138831 SHA256 018e11dd315745f582d70108b6071d37fb94854fde70961e17325bc19c4e2011 SHA512 fb3643d2527f365f129e98cacee71e587786587ac070f47cecff035b85962ea7c4ba47fbc58fc64ecafc0fe9120acb20fef0b0ef90c47450740c1bf107bcb86b WHIRLPOOL 83fd30d2d2e117ffe52bb6ee15a70d3ba3f662b5b4deee7c2b56609c1c5f041e02e5b97f8ae961d3f1f0e90ee8d0c9b15888bee46594ddde341f4988e6d3e4cf
+DIST xfce4-power-manager-1.4.4.tar.bz2 1144421 SHA256 c50ec8aa7e7848c57c0f856dceb8132eb5f37585f0ac1627459ab8c882c73b07 SHA512 40eb886e9316bedf02d2a6ff94f9045bd4094070a09b77e0005a1a7e5d281db7ab2ea96d6846efadeb3bb852bd301af03a0fd5b99d611fe43a763154c77390dc WHIRLPOOL 7e60e40e6bdadbd0d2ce421c308266244485b503e7a42aafd71a3d794ac2150dd4a7dd7cbeac0829d95e3be5ba43bf3b5cabeaa1ebe50a2d4082d46c1edd4977
 EBUILD xfce4-power-manager-1.3.0.ebuild 2508 SHA256 90ebf5678a6531308ed07ababcba24b4dc14cf91b15276217679568c7c12e8f1 SHA512 c185d5cf87795511a321cfc02f20ccc06e8e7e8dd07ad8df53243070cc962a7219638fda16f26561a8268a2829cee6eb95415c88b15e87129688ea2afcb3a57c WHIRLPOOL a2b18035171161bab7a7dcafe28e74fd4f6265978570866bb9dedd3ccb1a6b81cccbab9412b3f80a364aa5355bbefc9c88f21f6e421ffdf55c1e12ac032a7f32
 EBUILD xfce4-power-manager-1.4.0.ebuild 1862 SHA256 9eca65a39818044f3780c6deeacb7ebe330b8e98090d877836975db782ebf73f SHA512 6e1f1912e1cf138dbf9744001a6b5c3cf9e897dbcc8039d4125c9b9d55999e3d23c90086cd44ebf826ebff6c2fcf83de80c8fbbcf5725e168197fcea66668fdf WHIRLPOOL b136a23bbee04bfe65f6e5d8c67945d03f2d4339704bfbaff277d172591629d98930d3b9a165c5ce0471f72b638b52a2155fcf1f57ce854afad80f19cf0df050
 EBUILD xfce4-power-manager-1.4.1.ebuild 1801 SHA256 c418fed58bcfc1f8c0cc05e583f81baa804e45997b54e3c1522e821d0750e7f3 SHA512 a29e1e8d4033192dbc7887f0ea3f719eeae19d99b51831a50edcbbfa446c5dbf406d3e1cdcb254cc6611f06e45011fdc107654640ee19b7edff1708d19e0c518 WHIRLPOOL 81fa1b47aa662515b5b843f16f9cc4a74c292c161d14864fdf91972dfa361c37908cff2f629f1d33a6f1d42a8796e8fa048eaa8bc4a248b58fb0e23ed17dd9e3
 EBUILD xfce4-power-manager-1.4.2.ebuild 1800 SHA256 c0cb18239b6ac60bee2723c4cd637bb7385c503c85551cd8c95f92bc78a09521 SHA512 6878a906c32202d251c95b33a1488751b3e4819eef62602e341113724db33009e656b8440f2fc7f27ef6aed10f95ad498c75d514452657fb3d885ce4dd6b8331 WHIRLPOOL 8e7697866926778ca15b02c6dd9e8bf9cfea09ab9dc2daebd5f7252f7c6e6321b293147487ce1b5ccffeea891845551c4734cf4ac6a3268fdf2e910f666cd24e
 EBUILD xfce4-power-manager-1.4.3.ebuild 1798 SHA256 3ae32d917ec7eddbc844cd93aa7a814962593c318d904e1981d0df9ce530ab1d SHA512 9a4e045281b0f6b73419b51ef51884fb15b0804809245017ab0b416a02dbd842d760d7ca8a617ce235d5b04c91b8451d9dc51b672bf68f2d1843a2679397b023 WHIRLPOOL bc8590c080f12b2d035ad01aaaa269d275ca851b8b0abd9c4ded1fc0d53df3cea1a012ecd176b7a06c59f436857dc38b08098c33ceb42de095a0ee0f15aefcd9
-MISC ChangeLog 15354 SHA256 3c95e9e0a990cc7859f80f2b5370a6401436e67960a624b5762380918b94cf4a SHA512 61748029518efd56c7bb7d7afb5cabadda012dee4e0baba07e63cecc1fac2091edd559a15ae03edd3f209d63b5a7866606ad224904e6c0d76513435787b74cf8 WHIRLPOOL f49559c912cb28d29249a5864b9b55e529961d2b532f033448dfc3c4dd162cdfe5c3d37bdf1b3b6addeba7c8c55ee6054ea3dca1010a5815d91feafcaf30c7f6
+EBUILD xfce4-power-manager-1.4.4.ebuild 1812 SHA256 4728841d29ce7867e180e1a8a19324c7b5e7a264c34492de4bb3aedd315e7033 SHA512 ccc5c6e2388c03ff283a55f41e3ec3c81220de95f527dcd0b803fa2608ca091d1c57cd60bc1f3ab722d79b83397df93afa88480e1769970dcbec9275dc73a18d WHIRLPOOL e067cf75ae840175f5733cc23a253ac4fae5d9789eaf10b251c92b3e1ecd8b31b07fa87f34c7e570913c457863bbe8a3d9db7ea6a6f99827de311e28e7c2d3bc
+MISC ChangeLog 15576 SHA256 422f5ec1b344d9eee68cad8b112ff63fdf04fb0d167b3ffd5c9d67e8765e16dd SHA512 e504309a6bddd489c28c52e65b811237cd229088c747e6dc2c3ba98dd7cb2faaac16056e07449f0c6e60d23f0cd7426e7257ea0ce414314b7432d267487f4266 WHIRLPOOL 2f4a616c46e394eb73825af2de291cf15b34aae0fe03dedc7d979c62d484ee4e956dad045ab0514592d2941913ba1e57705a279a6ebd9fd66e3cf4d48e2791fd
 MISC metadata.xml 328 SHA256 f2c527a7d705dba4f89e8d4ee9e8753a1b02d76e807c543e0828cd552e36fa4a SHA512 3d2fb44a95a8f5efef609fd9055d79c1dabb6f83647671e7b41039ecaa96622878bf1d01fd23f563934668e3af22c7ae9e692789efcb7f81637b4e3fa1ea798d WHIRLPOOL 0080330bfccb679e920c1dd333433e33a27b2b52bb8a22cb341251e68e8e7ce108a040470eac9f57d3c9b28cae375cc533be1539ed025e6df9850709450a5bb5
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJU/GWIXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVDtI7XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOYUAQANzUFjk1A+Rrytdv66HTeNNp
-+CrgLQspMnHy3pvwIsYpBnHIoOYiZlW410kQkKVdpZiy3+8ZO/JTEwjQtnGyxuHU
-63OqmTOmbBBZ/cM/PL3lsd9bG6I6qposJrDZ2hU2xi73KKEt9Q1uQb6uAEezQvAn
-0QUO/l/3UqvPDt7lO+avdoYIT/CZjRC2jLY8mucbfCuLIym0Bazg6LbKIVo7FYC3
-CRv+jHbM72LZ27OO0kW8DaYVrzYl4wCEeuR+fOYNlhwji5J7MtPXZ7wK5gpO23tF
-0RtTCpawg5yNQI3+C9qxzGL4blz/h5dikk4B9VhTwV+pdZwBAgUzdUxR/Jy1+gpv
-w7n7HlYG63wMyxUybvKmiqUHqzsIjwds6DoQAWQhXzl9Og4vtjtsZBCGd3um105W
-D4XQrXS2cm82ttZiXjOYOOoR4wEOTBDK2PBFtT/saoZZfPSOC6pk+JUDj+NprSMc
-pIeBMZQGNo2BQ5iNBjyIArVe/UX4vaUmhD6+CQZljugKMF4cgGV/9GzB1bSKMWaI
-rANPphdZWgJ6i7UwxnlK9rIc6nynqA4XJ8hTE+zDN25Iqd72y2h/hRE1JT3F6JN3
-ntBLK9xP8tkLx2G7kpSJguCbVA3Qlb/pHEpt1MN885mqecwox5nKYRwp8pQ2rx2T
-/HiAnlHpIS9vEfOOT7c+
-=Fyj3
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZONgkP/2yc/VgFWzAm0Z5s3OXV/otC
+/V/u7gCu9lb5Zsk6XVcDXrwkBA9sMOQAbHB+8BgEVQLjzm72/mn1pe7sRiJY6mGi
+rs8dlsU4Q9vudiQ2a8zcq4wQj8GHUfRe+WyE1g6UYYp6/J93dIkPKRVOh/3oUfxS
+seIOgCDJnhVhAdSETC9KvufFFhBEjryggHNFr829aeilfdsdGyy7xvvuFnHab9Yl
+r3iVNmHShsrI7s33bWXKiia5XLHW6254NOTLzIcHeRsd0LUnhyxW8P7hau8clJTx
+kj3s59n9D0YLrrwYw1ZGDyIoYpKGR36QAlhww7Nehgs/6O0xc5VhpUhbYyWZNp6H
+KSj7nnBcVOAr+hitlBKE7Bv10HECBysflKaCinmWJRYKovos7iznsh1ckPqKlm3W
+o8sZTb3g72L/JzUXSZL3TQEeT6Ah6JveP7/3iEWz2mcgqyajNDZmLrrz2mMpB7Kv
+/ZzLliamDJ8eIAAdqUw4pmEQWszgQDiT9/JBQ+zQNn49uSA+3b/IY8YaqQ+NkKfx
++DxV63Y7vKmEZUgH8rmkSyT4zkDkAoQ57aucUBKIyvuERwsvXtwkw2zZQyibZrne
+G0LrHDPybhrT74dz2WzObw2Wy7gp30BwdMC08N8nonq7+IcQu00j28OyEHeYt4ET
+X5BCDVWJpUM+Uq78IegG
+=ggA5
 -----END PGP SIGNATURE-----
